--- a/allclasses-frame.html
+++ b/allclasses-frame.html
@@ -326,6 +326,7 @@
 <li><a href="mitiv/array/ShortScalar.html" title="class in mitiv.array" target="classFrame">ShortScalar</a></li>
 <li><a href="mitiv/base/mapping/ShortScanner.html" title="interface in mitiv.base.mapping" target="classFrame"><i>ShortScanner</i></a></li>
 <li><a href="mitiv/optim/SimpleBounds.html" title="class in mitiv.optim" target="classFrame">SimpleBounds</a></li>
+<li><a href="mitiv/optim/SimpleBoxedSet.html" title="class in mitiv.optim" target="classFrame">SimpleBoxedSet</a></li>
 <li><a href="mitiv/optim/SimpleLowerBound.html" title="class in mitiv.optim" target="classFrame">SimpleLowerBound</a></li>
 <li><a href="mitiv/optim/SimpleUpperBound.html" title="class in mitiv.optim" target="classFrame">SimpleUpperBound</a></li>
 <li><a href="mitiv/invpb/SimpleViewer.html" title="class in mitiv.invpb" target="classFrame">SimpleViewer</a></li>
