--- a/index-all.html
+++ b/index-all.html
@@ -15726,14 +15726,6 @@
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/microscopy/PSF_Estimation.html#setLowerBound(double)">setLowerBound(double)</a></span> - Method in class mitiv.microscopy.<a href="./mitiv/microscopy/PSF_Estimation.html" title="class in mitiv.microscopy">PSF_Estimation</a></dt>
 <dd>&nbsp;</dd>
-<dt><span class="strong"><a href="./mitiv/optim/BoxedSet.html#setLowerBound(double)">setLowerBound(double)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/BoxedSet.html" title="class in mitiv.optim">BoxedSet</a></dt>
-<dd>
-<div class="block">Set the lower bound of the variables.</div>
-</dd>
-<dt><span class="strong"><a href="./mitiv/optim/BoxedSet.html#setLowerBound(mitiv.linalg.Vector)">setLowerBound(Vector)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/BoxedSet.html" title="class in mitiv.optim">BoxedSet</a></dt>
-<dd>
-<div class="block">Set the lower bound of the variables.</div>
-</dd>
 <dt><span class="strong"><a href="./mitiv/optim/DoubleBoxedSet.html#setLowerBound(double)">setLowerBound(double)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/DoubleBoxedSet.html" title="class in mitiv.optim">DoubleBoxedSet</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/optim/DoubleBoxedSet.html#setLowerBound(mitiv.linalg.Vector)">setLowerBound(Vector)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/DoubleBoxedSet.html" title="class in mitiv.optim">DoubleBoxedSet</a></dt>
@@ -15742,6 +15734,14 @@
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/optim/FloatBoxedSet.html#setLowerBound(mitiv.linalg.Vector)">setLowerBound(Vector)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/FloatBoxedSet.html" title="class in mitiv.optim">FloatBoxedSet</a></dt>
 <dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/optim/SimpleBoxedSet.html#setLowerBound(double)">setLowerBound(double)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/SimpleBoxedSet.html" title="class in mitiv.optim">SimpleBoxedSet</a></dt>
+<dd>
+<div class="block">Set the lower bound of the variables.</div>
+</dd>
+<dt><span class="strong"><a href="./mitiv/optim/SimpleBoxedSet.html#setLowerBound(mitiv.linalg.Vector)">setLowerBound(Vector)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/SimpleBoxedSet.html" title="class in mitiv.optim">SimpleBoxedSet</a></dt>
+<dd>
+<div class="block">Set the lower bound of the variables.</div>
+</dd>
 <dt><span class="strong"><a href="./commands/TotalVariationDeconvolution.html#setMaximumIterations(int)">setMaximumIterations(int)</a></span> - Method in class commands.<a href="./commands/TotalVariationDeconvolution.html" title="class in commands">TotalVariationDeconvolution</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/linalg/TruncatedConjugateGradient.html#setMaximumIterations(int)">setMaximumIterations(int)</a></span> - Method in class mitiv.linalg.<a href="./mitiv/linalg/TruncatedConjugateGradient.html" title="class in mitiv.linalg">TruncatedConjugateGradient</a></dt>
@@ -15978,14 +15978,6 @@
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/microscopy/PSF_Estimation.html#setUpperBound(double)">setUpperBound(double)</a></span> - Method in class mitiv.microscopy.<a href="./mitiv/microscopy/PSF_Estimation.html" title="class in mitiv.microscopy">PSF_Estimation</a></dt>
 <dd>&nbsp;</dd>
-<dt><span class="strong"><a href="./mitiv/optim/BoxedSet.html#setUpperBound(double)">setUpperBound(double)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/BoxedSet.html" title="class in mitiv.optim">BoxedSet</a></dt>
-<dd>
-<div class="block">Set the upper bound of the variables.</div>
-</dd>
-<dt><span class="strong"><a href="./mitiv/optim/BoxedSet.html#setUpperBound(mitiv.linalg.Vector)">setUpperBound(Vector)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/BoxedSet.html" title="class in mitiv.optim">BoxedSet</a></dt>
-<dd>
-<div class="block">Set the upper bound of the variables.</div>
-</dd>
 <dt><span class="strong"><a href="./mitiv/optim/DoubleBoxedSet.html#setUpperBound(double)">setUpperBound(double)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/DoubleBoxedSet.html" title="class in mitiv.optim">DoubleBoxedSet</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/optim/DoubleBoxedSet.html#setUpperBound(mitiv.linalg.Vector)">setUpperBound(Vector)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/DoubleBoxedSet.html" title="class in mitiv.optim">DoubleBoxedSet</a></dt>
@@ -15994,6 +15986,14 @@
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/optim/FloatBoxedSet.html#setUpperBound(mitiv.linalg.Vector)">setUpperBound(Vector)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/FloatBoxedSet.html" title="class in mitiv.optim">FloatBoxedSet</a></dt>
 <dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/optim/SimpleBoxedSet.html#setUpperBound(double)">setUpperBound(double)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/SimpleBoxedSet.html" title="class in mitiv.optim">SimpleBoxedSet</a></dt>
+<dd>
+<div class="block">Set the upper bound of the variables.</div>
+</dd>
+<dt><span class="strong"><a href="./mitiv/optim/SimpleBoxedSet.html#setUpperBound(mitiv.linalg.Vector)">setUpperBound(Vector)</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/SimpleBoxedSet.html" title="class in mitiv.optim">SimpleBoxedSet</a></dt>
+<dd>
+<div class="block">Set the upper bound of the variables.</div>
+</dd>
 <dt><span class="strong"><a href="./mitiv/utils/reconstruction/ReconstructionThreadToken.html#setValue(int, double)">setValue(int, double)</a></span> - Method in class mitiv.utils.reconstruction.<a href="./mitiv/utils/reconstruction/ReconstructionThreadToken.html" title="class in mitiv.utils.reconstruction">ReconstructionThreadToken</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/cost/GradientChecker.html#setVariables(mitiv.linalg.Vector, boolean)">setVariables(Vector, boolean)</a></span> - Method in class mitiv.cost.<a href="./mitiv/cost/GradientChecker.html" title="class in mitiv.cost">GradientChecker</a></dt>
@@ -16258,6 +16258,10 @@
 <dd>
 <div class="block">Create a projector with scalar upper bound.</div>
 </dd>
+<dt><a href="./mitiv/optim/SimpleBoxedSet.html" title="class in mitiv.optim"><span class="strong">SimpleBoxedSet</span></a> - Class in <a href="./mitiv/optim/package-summary.html">mitiv.optim</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/optim/SimpleBoxedSet.html#SimpleBoxedSet(mitiv.linalg.VectorSpace)">SimpleBoxedSet(VectorSpace)</a></span> - Constructor for class mitiv.optim.<a href="./mitiv/optim/SimpleBoxedSet.html" title="class in mitiv.optim">SimpleBoxedSet</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="./mitiv/optim/SimpleLowerBound.html" title="class in mitiv.optim"><span class="strong">SimpleLowerBound</span></a> - Class in <a href="./mitiv/optim/package-summary.html">mitiv.optim</a></dt>
 <dd>
 <div class="block">Implements a simple lower bound projector.</div>
@@ -20029,7 +20033,7 @@
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/base/Traits.html#UNKNOWN_BYTE_ORDER">UNKNOWN_BYTE_ORDER</a></span> - Static variable in interface mitiv.base.<a href="./mitiv/base/Traits.html" title="interface in mitiv.base">Traits</a></dt>
 <dd>&nbsp;</dd>
-<dt><span class="strong"><a href="./mitiv/optim/BoxedSet.html#unsetBounds()">unsetBounds()</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/BoxedSet.html" title="class in mitiv.optim">BoxedSet</a></dt>
+<dt><span class="strong"><a href="./mitiv/optim/SimpleBoxedSet.html#unsetBounds()">unsetBounds()</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/SimpleBoxedSet.html" title="class in mitiv.optim">SimpleBoxedSet</a></dt>
 <dd>
 <div class="block">Unset the bound.</div>
 </dd>
@@ -20045,7 +20049,7 @@
 <dd>
 <div class="block">Forget the assumed function least value.</div>
 </dd>
-<dt><span class="strong"><a href="./mitiv/optim/BoxedSet.html#unsetLowerBound()">unsetLowerBound()</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/BoxedSet.html" title="class in mitiv.optim">BoxedSet</a></dt>
+<dt><span class="strong"><a href="./mitiv/optim/SimpleBoxedSet.html#unsetLowerBound()">unsetLowerBound()</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/SimpleBoxedSet.html" title="class in mitiv.optim">SimpleBoxedSet</a></dt>
 <dd>
 <div class="block">Unset the lower bound(s).</div>
 </dd>
@@ -20053,7 +20057,7 @@
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/io/FormatOptions.html#unsetMinValue()">unsetMinValue()</a></span> - Method in class mitiv.io.<a href="./mitiv/io/FormatOptions.html" title="class in mitiv.io">FormatOptions</a></dt>
 <dd>&nbsp;</dd>
-<dt><span class="strong"><a href="./mitiv/optim/BoxedSet.html#unsetUpperBound()">unsetUpperBound()</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/BoxedSet.html" title="class in mitiv.optim">BoxedSet</a></dt>
+<dt><span class="strong"><a href="./mitiv/optim/SimpleBoxedSet.html#unsetUpperBound()">unsetUpperBound()</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/SimpleBoxedSet.html" title="class in mitiv.optim">SimpleBoxedSet</a></dt>
 <dd>
 <div class="block">Unset the upper bound(s).</div>
 </dd>
