--- a/mitiv/optim/package-frame.html
+++ b/mitiv/optim/package-frame.html
@@ -28,6 +28,7 @@
 <li><a href="ReverseCommunicationOptimizer.html" title="class in mitiv.optim" target="classFrame">ReverseCommunicationOptimizer</a></li>
 <li><a href="ReverseCommunicationOptimizerWithLineSearch.html" title="class in mitiv.optim" target="classFrame">ReverseCommunicationOptimizerWithLineSearch</a></li>
 <li><a href="SimpleBounds.html" title="class in mitiv.optim" target="classFrame">SimpleBounds</a></li>
+<li><a href="SimpleBoxedSet.html" title="class in mitiv.optim" target="classFrame">SimpleBoxedSet</a></li>
 <li><a href="SimpleLowerBound.html" title="class in mitiv.optim" target="classFrame">SimpleLowerBound</a></li>
 <li><a href="SimpleUpperBound.html" title="class in mitiv.optim" target="classFrame">SimpleUpperBound</a></li>
 <li><a href="VMLMB.html" title="class in mitiv.optim" target="classFrame">VMLMB</a></li>
