--- a/mitiv/optim/package-summary.html
+++ b/mitiv/optim/package-summary.html
@@ -173,18 +173,22 @@
 </td>
 </tr>
 <tr class="rowColor">
+<td class="colFirst"><a href="../../mitiv/optim/SimpleBoxedSet.html" title="class in mitiv.optim">SimpleBoxedSet</a></td>
+<td class="colLast">&nbsp;</td>
+</tr>
+<tr class="altColor">
 <td class="colFirst"><a href="../../mitiv/optim/SimpleLowerBound.html" title="class in mitiv.optim">SimpleLowerBound</a></td>
 <td class="colLast">
 <div class="block">Implements a simple lower bound projector.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../mitiv/optim/SimpleUpperBound.html" title="class in mitiv.optim">SimpleUpperBound</a></td>
 <td class="colLast">
 <div class="block">Implements a simple upper bound projector.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../mitiv/optim/VMLMB.html" title="class in mitiv.optim">VMLMB</a></td>
 <td class="colLast">
 <div class="block">Multivariate non-linear optimization with simple bound constraints by
