--- a/mitiv/optim/package-tree.html
+++ b/mitiv/optim/package-tree.html
@@ -74,8 +74,12 @@
 <ul>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/BoxedSet.html" title="class in mitiv.optim"><span class="strong">BoxedSet</span></a>
 <ul>
+<li type="circle">mitiv.optim.<a href="../../mitiv/optim/SimpleBoxedSet.html" title="class in mitiv.optim"><span class="strong">SimpleBoxedSet</span></a>
+<ul>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/DoubleBoxedSet.html" title="class in mitiv.optim"><span class="strong">DoubleBoxedSet</span></a></li>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/FloatBoxedSet.html" title="class in mitiv.optim"><span class="strong">FloatBoxedSet</span></a></li>
+</ul>
+</li>
 </ul>
 </li>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/ConvexSetProjector.html" title="class in mitiv.optim"><span class="strong">ConvexSetProjector</span></a>
