--- a/overview-tree.html
+++ b/overview-tree.html
@@ -514,8 +514,12 @@
 <li type="circle">mitiv.microscopy.<a href="mitiv/microscopy/BiPhotonModel.html" title="class in mitiv.microscopy"><span class="strong">BiPhotonModel</span></a></li>
 <li type="circle">mitiv.optim.<a href="mitiv/optim/BoxedSet.html" title="class in mitiv.optim"><span class="strong">BoxedSet</span></a>
 <ul>
+<li type="circle">mitiv.optim.<a href="mitiv/optim/SimpleBoxedSet.html" title="class in mitiv.optim"><span class="strong">SimpleBoxedSet</span></a>
+<ul>
 <li type="circle">mitiv.optim.<a href="mitiv/optim/DoubleBoxedSet.html" title="class in mitiv.optim"><span class="strong">DoubleBoxedSet</span></a></li>
 <li type="circle">mitiv.optim.<a href="mitiv/optim/FloatBoxedSet.html" title="class in mitiv.optim"><span class="strong">FloatBoxedSet</span></a></li>
+</ul>
+</li>
 </ul>
 </li>
 <li type="circle">mitiv.io.<a href="mitiv/io/BufferedImageUtils.html" title="class in mitiv.io"><span class="strong">BufferedImageUtils</span></a></li>
