--- a/allclasses-noframe.html
+++ b/allclasses-noframe.html
@@ -326,6 +326,7 @@
 <li><a href="mitiv/array/ShortScalar.html" title="class in mitiv.array">ShortScalar</a></li>
 <li><a href="mitiv/base/mapping/ShortScanner.html" title="interface in mitiv.base.mapping"><i>ShortScanner</i></a></li>
 <li><a href="mitiv/optim/SimpleBounds.html" title="class in mitiv.optim">SimpleBounds</a></li>
+<li><a href="mitiv/optim/SimpleBoxedSet.html" title="class in mitiv.optim">SimpleBoxedSet</a></li>
 <li><a href="mitiv/optim/SimpleLowerBound.html" title="class in mitiv.optim">SimpleLowerBound</a></li>
 <li><a href="mitiv/optim/SimpleUpperBound.html" title="class in mitiv.optim">SimpleUpperBound</a></li>
 <li><a href="mitiv/invpb/SimpleViewer.html" title="class in mitiv.invpb">SimpleViewer</a></li>
